--- a/RPGstyle.css
+++ b/RPGstyle.css
@@ -28,6 +28,18 @@ h2 {
     margin: auto;
 }
 
+h3 {
+    text-align: center;
+    background-color: transparent;
+    color: beige;
+    border: solid 2px #336e67;
+    border-radius: 25px;
+    width: 48%;
+    height: 6%;
+    font-size: large;
+    margin: auto;
+}
+
 h1 {
     background-color: transparent;
     color: beige;
@@ -69,7 +81,7 @@ h1:hover {
     width: 25%;
     height: 50%;
     margin: auto;
-    box-shadow: inset 0 0 40px #000000;
+    box-shadow: 0px 18px 24px 18px rgba(0, 0, 0, 0.9);
 }
 
 .Container {
@@ -114,6 +126,7 @@ h1:hover {
     color: #9fd3c7;
     cursor: pointer;
     right: 16%;
+    transition: 0.2s ease-in-out;
 }
 
 #MRcopyBtn1:hover, #MRcopyBtn2:hover, #MRcopyBtn3:hover, #MRcopyBtn4:hover, #MRcopyBtn5:hover {
@@ -139,10 +152,11 @@ h1:hover {
     border: solid 2px black;
     outline-style: none;
     outline-color: none;
-    background-color: #d70000;
-    color: black;
+    background-color: transparent;
+    color: red;
     cursor: pointer;
     right: 9%;
+    transition: 0.2s ease-in-out;
 }
 
 #MRdeleteBtn1:hover, #MRdeleteBtn2:hover, #MRdeleteBtn3:hover, #MRdeleteBtn4:hover, #MRdeleteBtn5:hover {
@@ -154,8 +168,8 @@ h1:hover {
     border: solid 2px black;
     outline-style: none;
     outline-color: none;
-    background-color: transparent;
-    color: red;
+    background-color: #d70000;
+    color: black;
     cursor: pointer;
     right: 9%;
     transition: 0.2s ease-in-out;
@@ -177,6 +191,100 @@ h1:hover {
     cursor: default;
     color: #f9f9ed;
     box-shadow: -18px 20px 14px 2px rgba(0, 0, 0, 0.8);
+}
+
+.ApplyPass {
+    text-align: center;
+    margin: auto;
+    position: absolute;
+    width: 30%;
+    height: 40%;
+    padding: 5px;
+    font-size: small;
+    left: 10%;
+    top: 15%;
+    cursor: default;
+}
+
+#AppliedPass {
+    margin: auto;
+    border-color: #336e67;
+    position: absolute;
+    right: 23.5%;
+    background-color: transparent;
+    color: transparent;
+    text-align: center;
+    width: 50%;
+    padding: 5px;
+    outline-style: none;
+    outline-color: none;
+    border-radius: 10px;
+    cursor: default;
+    color: #f9f9ed;
+    text-overflow: ellipsis;
+    box-shadow: -18px 20px 14px 2px rgba(0, 0, 0, 0.8);
+}
+
+#AppliedPassBtn {
+    width: 5%;
+    height: 7%;
+    padding: 4px;
+    position: absolute;
+    border-radius: 15px;
+    border: solid 2px;
+    outline-style: none;
+    outline-color: none;
+    background-color: transparent;
+    color: #18cab5;
+    cursor: pointer;
+    right: 16%;
+    transition: 0.2s ease-in-out;
+}
+
+#AppliedPassBtn:hover {
+    width: 5%;
+    height: 7%;
+    padding: 4px;
+    border-radius: 10px;
+    border: solid 2px;
+    outline-style: none;
+    outline-color: none;
+    background-color: transparent;
+    color: #3adb09;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+
+#DeletePastedPassBtn {
+    width: 5%;
+    height: 7%;
+    padding: 4px;
+    position: absolute;
+    border-radius: 15px;
+    border: solid 2px black;
+    outline-style: none;
+    outline-color: none;
+    background-color: transparent;
+    color: red;
+    cursor: pointer;
+    right: 9%;
+    transition: 0.2s ease-in-out;
+}
+
+#DeletePastedPassBtn:hover {
+    width: 5%;
+    height: 7%;
+    padding: 4px;
+    position: absolute;
+    border-radius: 15px;
+    border: solid 2px black;
+    outline-style: none;
+    outline-color: none;
+    background-color: #d70000;
+    color: black;
+    cursor: pointer;
+    right: 9%;
+    transition: 0.2s ease-in-out;
 }
 
 #display {
@@ -300,8 +408,8 @@ h1:hover {
 .inputRange::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    width: 7px;
-    height: 35px;
+    width: 10px;
+    height: 10px;
     background-color: rgb(10, 240, 209);
     border-radius: 5px;
     cursor: pointer;
@@ -363,4 +471,18 @@ input:checked[type="checkbox"]:before {
 
 ::placeholder {
     color: #999999;
+}
+
+.password-strength {
+    display: inline-block;
+    padding-left: 20px;
+    background-image: url("ball.png");
+    background-position: 0 50%;
+    background-repeat: no-repeat;
+    background-size: 10px 10px;
+    font-weight: bold;
+    position: absolute;
+    top: 30%;
+    left: 40%;
+    color: rgb(10, 240, 209);
 }
